Modificacion en detalles de facturacion

--- a/SistemaVenta.AplicacionWeb/Views/Producto/Index.cshtml
+++ b/SistemaVenta.AplicacionWeb/Views/Producto/Index.cshtml
@@ -120,22 +120,10 @@
                                     <label for="cboUnidadMedida">Unidad de Medida</label>
                                     <select class="form-control form-control-sm" id="cboUnidadMedida">
                                         <option value="0">Seleccionar</option>
-                                        <option value="A9">A9 - Tarifa</option>
-                                        <option value="E48">E48 - Unidad de servicio</option>
-                                        <option value="H87">H87 - Pieza</option>
-                                        <option value="KGM">KGM - Kilogramo</option>
-                                        <option value="GRM">GRM - Gramo</option>
-                                        <option value="MTR">MTR - Metro</option>
-                                        <option value="LTR">LTR - Litro</option>
-                                        <option value="MLT">MLT - Mililitro</option>
-                                        <option value="HUR">HUR - Hora</option>
-                                        <option value="MIN">MIN - Minuto</option>
-                                        <option value="SEC">SEC - Segundo</option>
-                                        <option value="C62">C62 - Uno</option>
-                                        <option value="XBX">XBX - Caja</option>
-                                        <option value="BG">BG - Bolsa</option>
-                                        <option value="RO">RO - Rollo</option>
-                                        <option value="E51">E51 - Tarifa</option>
+                                        <option value="A9">Tarifa</option>
+                                        <option value="E48">Unidad de servicio</option>
+                                        <option value="H87">Pieza</option>
+                                        <option value="E51">Tarifa</option>
                                     </select>
 
                                 </div>
@@ -143,24 +131,18 @@
                                     <label for="cboClaveProductoSat">Clave Producto SAT</label>
                                     <select class="form-control form-control-sm" id="cboClaveProductoSat">
                                         <option value="0">Seleccionar</option>
-                                        <option value="01010101">01010101 - No existe en el catálogo</option>
-                                        <option value="32101601">32101601 - Memoria de acceso aleatorio (RAM)</option>
-                                        <option value="32101608">32101608 - Memoria de sólo lectura (ROM)</option>
-                                        <option value="32101621">32101621 - Memoria dram síncrona (SDRAM)</option>
-                                        <option value="43191605">43191605 - Cables para auriculares de teléfonos</option>
-                                        <option value="43191606">43191606 - Auriculares de teléfonos</option>
-                                        <option value="43191621">43191621 - Adaptadores de auriculares</option>
-                                        <option value="43201803">43201803 - Unidades de disco duro</option>
-                                        <option value="43202205">43202205 - Teclas o teclados</option>
-                                        <option value="43211500">43211500 - Computadores</option>
-                                        <option value="43211503">43211503 - Computadores notebook</option>
-                                        <option value="43211507">43211507 - Computadores de escritorio</option>
-                                        <option value="43211508">43211508 - Computadores personales</option>
-                                        <option value="43211509">43211509 - Computadores de tableta</option>
-                                        <option value="43211706">43211706 - Teclados</option>
-                                        <option value="43211719">43211719 - Micrófonos de voz para computadores</option>
-                                        <option value="43211900">43211900 - Monitores y pantallas de computador</option>
-                                        <option value="46171612">46171612 - Monitores de video</option>
+                                        <option value="01010101">No existe en el catálogo</option>
+                                        <option value="43222800">Equipo de telefonía</option>
+                                        <option value="43222900">Accesorios de equipo de telefonía</option>
+                                        <option value="43201552">Adaptadores para hardware o telefonía</option>
+                                        <option value="83111603">Servicios de telefonía celular</option>
+                                        <option value="43191606">Auriculares de teléfonos</option>
+                                        <option value="43191621">Adaptadores de auriculares</option>
+                                        <option value="43211500">Computadores</option>
+                                        <option value="43211503">Computadores notebook</option>
+                                        <option value="43211507">Computadores de escritorio</option>
+                                        <option value="43211508">Computadores personales</option>
+                                        <option value="43211509">Computadores de tableta</option>
                                     </select>
 
                                 </div>
